further adjusting button layout

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <span class="navbar-brand mb-0 h1">Budget Pokedex</span>
     </nav>
     
-    <ul class="pokedex-list list-group list-unstyled">
-                <!--Container for buttons-->
-    </ul>
+    <div class="pokedex-list-container">
+      <ul class="pokedex-list list-group list-unstyled">
+        <!--Container for buttons-->
+      </ul>
+    </div>
 
     <!-- Bootstrap modals -->
     <div class="modal fade" id="pokemonModal" tabindex="-1" aria-labelledby="pokemonModal" aria-hidden="true">
