--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </nav>
     
     <div class="pokedex-list-container">
-      <ul class="pokedex-list list-group list-unstyled">
+      <!-- <ul class="pokedex-list list-group list-unstyled"> -->
+      <ul class="pokedex-list">
         <!--Container for buttons-->
       </ul>
     </div>
