changing list-style to remove list dots

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </nav>
     
     <div class="pokedex-list-container">
-      <!-- <ul class="pokedex-list list-group list-unstyled"> -->
-      <ul class="pokedex-list">
+      <ul class="pokedex-list list-group list-unstyled">
         <!--Container for buttons-->
       </ul>
     </div>
