using classnames to try and center list container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="navbar-brand mb-0 h1">Budget Pokedex</span>
     </nav>
     
-    <div class="pokedex-list-container">
+    <div class="pokedex-list-container text-center align-items-center">
       <ul class="pokedex-list list-group list-unstyled">
         <!--Container for buttons-->
       </ul>
